--- a/style.css
+++ b/style.css
@@ -1,10 +1,38 @@
 body {
     margin: 0;
+    padding: 0;
     overflow: hidden;
+    /* border: 2px solid red; */
+    position: relative;
   }
 
   canvas {
     display: block;
     background-color: #fff;
     margin: 0 auto;
+    /* border: solid green 2px; */
+    /* height: 70vh; */
   }
+
+  .buttons{
+    position: absolute;
+    top: 50%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  button, input{
+    cursor: pointer;
+    background-color: white;
+    border: solid 1px black;
+    border-radius: 4px;
+    outline:  none;
+
+    height: 30px;
+    width: 70px;
+  }
+
+  button:hover{
+    background-color: rgba(159, 163, 170, 0.579);
+  }
+
